# fisher-API

./: .gitignore  Dockerfile  LICENSE  README.md  dependencies.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  requirements_depricated.txt  test.py  update_zip_file.sh  upload.py
.github/workflows/: main.yml
api/: events.py  fish.py  users.py
app/: main.py
app/api/: events.py  export.py  fishes.py  users.py
app/api/utils/: fishes.py  users.py
app/db/: db_setup.py
app/db/models/: event.py  fish.py  report.py  user.py
app/schemas/: events.py  fishes.py  users.py
app/templates/: add_fish.html  download_form.html  reset_password_template.html  successfully_created_account.html  verification_email_template.html
db/: db_setup.py
db/models/: fish.py  user.py
