[tool.poetry]
name = "fisherapp"
version = "0.1.0"
description = ""
authors = ["Nassim Massaudi <n.nassim4100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.99.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
